This is third commit

--- a/index.html
+++ b/index.html
@@ -4,14 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
-
+<body class="open-sans-normel">
+    <header class="hed">
+        <nav class="nav">
+            <h1 class="hd">Ma<span id="cl">r</span>y</h1>
+            <ul class="ul" type="none">
+                <li><a href="" class="dark-2">Portfolio</a></li>
+                <li><a href="" class="dark-2">Blog</a></li>
+                <li><a href=""><button id="tex">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="text">
+                <h4 id="sub" class=".dark-2">Hi, I  am</h4>
+                <h1>Mary Hardy</h1>
+                <p class="des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="main">
+                    <div class="down">
+                        <button id="tex">Download CV</button>
+                    </div>
+                    <div class="cont">
+                        <button id="c">Contact</button>
+                    </div>
+                </div>
+            </div>
+            <img class="profile" src="images/hardy.png" alt="comming soon">
+        </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
