this is 4th commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normel">
-    <header class="hed">
+    <header class="hed secondary-background">
         <nav class="nav">
             <h1 class="hd">Ma<span id="cl">r</span>y</h1>
             <ul class="ul" type="none">
@@ -37,7 +37,16 @@
         </div>
     </header>
     <main>
-        
+        <section class="about secondary-background">
+            <h3 class="sction-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="pid">
+                <p class="pg"><span id="x1">Name:</span><br><span id="x2">Mary Hardy</span></p>
+                <p class="pg"><span id="x1">Email:</span><br><span id="x2">info@gmail.com</span></p>
+                <p class="pg"><span id="x1">Date Of Birth:</span><br><span id="x2">11 November 1987</span></p>
+                <p class="pg"><span id="x1">From:</span><br><span id="x2">Los Angeles,USA</span></p>
+            </div>
+        </section>  
     </main>
     <footer>
 
