--- a/index.html
+++ b/index.html
@@ -38,13 +38,39 @@
     </header>
     <main>
         <section class="about secondary-background">
-            <h3 class="sction-title">About Me</h3>
+            <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="pid">
                 <p class="pg"><span id="x1">Name:</span><br><span id="x2">Mary Hardy</span></p>
                 <p class="pg"><span id="x1">Email:</span><br><span id="x2">info@gmail.com</span></p>
                 <p class="pg"><span id="x1">Date Of Birth:</span><br><span id="x2">11 November 1987</span></p>
                 <p class="pg"><span id="x1">From:</span><br><span id="x2">Los Angeles,USA</span></p>
+            </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="sk">Vanilla JavaScript</h4>
+                    <p class="pk">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="sk">React</h4>
+                    <p class="pk">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="sk">Node.js</h4>
+                    <p class="pk">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="sk">MongoDB</h4>
+                    <p class="pk">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
             </div>
         </section>  
     </main>
