This is 6th commit

--- a/index.html
+++ b/index.html
@@ -72,10 +72,66 @@
                     <p class="pk">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
+        </section>
+        <section class="resume">
+            <h1 class="rh">A summary of My Resume</h1>
+            <div class="ed-ex">
+                <div class="ed" style="margin-right: 35px;">
+                    <h2 class="edh">My Education</h2>
+                    <hr>
+                    <div class="D0">
+                        <h3 class="d1">Master in Computer Engr.</h3>
+                        <p class="d2">Harvard University / 2015 - 2017</p>
+                        <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="D0">
+                        <h3 class="d1">Master in Computer Engr.</h3>
+                        <p class="d2">Harvard University / 2015 - 2017</p>
+                        <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="D0">
+                        <h3 class="d1">Master in Computer Engr.</h3>
+                        <p class="d2">Harvard University / 2015 - 2017</p>
+                        <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="ex" style="margin-left: 35px;">
+                    <h2 class="edh">My Experience</h2>
+                    <hr>
+                    <div class="D0">
+                        <h3 class="d1">Sr. Font End Developer</h3>
+                        <p class="d2">Apple Inc / 2020 - Current</p>
+                        <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="D0">
+                        <h3 class="d1">Jr. Font End Developer</h3>
+                        <p class="d2">Dribbble Inc / 2018 - 2022</p>
+                        <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="D0">
+                        <h3 class="d1">HTML Developer</h3>
+                        <p class="d2">Adobe Inc / 2017 - 2018</p>
+                        <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="down" style="margin: auto;">
+                <button id="tex">Download CV</button>
+            </div>
         </section>  
     </main>
     <footer>
-
+        <!-- <div class="connect">
+        </div>
+        <div class="message">
+            <div class="down">
+                <button id="tex">Download CV</button>
+            </div>  
+        </div> -->
     </footer>
 </body>
 </html>
