this is 6th commit

--- a/index.html
+++ b/index.html
@@ -124,14 +124,23 @@
             </div>
         </section>  
     </main>
-    <footer>
-        <!-- <div class="connect">
+    <footer class="foot">
+        <div class="connect">
+            <h2 class="fh">Lets Connect</h2>
+            <p class="d4">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <a href="https://www.facebook.com/" target="_blank"><img id="im" src="images/icons/facebook.png" alt=""></a>
+            <a href="https://x.com/?lang=en&mx=2" target="_blank"><img id="im" src="images/icons/twitter.png" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"><img id="im" src="images/icons/insta.png" alt=""></a>
         </div>
         <div class="message">
-            <div class="down">
-                <button id="tex">Download CV</button>
-            </div>  
-        </div> -->
+            <h2 class="fh">Let’s Message me</h2>
+            <form>
+                <input id="is" type="text" placeholder="Your Name"><br>
+                <input id="is" type="text" placeholder="Your Email"><br>
+                <textarea name="" id="is2" cols="30" rows="10" placeholder="Message"></textarea>
+            </form>
+            <button id="tex">Submit</button>  
+        </div>
     </footer>
 </body>
 </html>
