this is final commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="open-sans-normel">
     <header class="hed secondary-background">
@@ -26,10 +27,10 @@
                 <p class="des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div class="main">
                     <div class="down">
-                        <button id="tex">Download CV</button>
+                        <button id="tex"><i class="fa-solid fa-download"></i> Download CV</button>
                     </div>
                     <div class="cont">
-                        <button id="c">Contact</button>
+                        <button id="c"><i class="fa-solid fa-phone"></i>Contact</button>
                     </div>
                 </div>
             </div>
@@ -120,7 +121,7 @@
                 </div>
             </div>
             <div class="down" style="margin: auto;">
-                <button id="tex">Download CV</button>
+                <button id="tex"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>  
     </main>
