--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="open-sans-normel">
-    <header class="hed secondary-background">
+    <header class="hed secondary-background hide">
         <nav class="nav">
             <h1 class="hd">Ma<span id="cl">r</span>y</h1>
             <ul class="ul" type="none">
@@ -38,7 +38,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-background">
+        <section class="about secondary-background hide">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="pid">
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
+        <section class="resume hide">
             <h1 class="rh">A summary of My Resume</h1>
             <div class="ed-ex">
                 <div class="ed" style="margin-right: 35px;">
@@ -125,7 +125,7 @@
             </div>
         </section>  
     </main>
-    <footer class="foot">
+    <footer class="foot hide">
         <div class="connect">
             <h2 class="fh">Lets Connect</h2>
             <p class="d4">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
