--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="open-sans-normel">
-    <header class="hed secondary-background hide">
+    <header class="hed secondary-background">
         <nav class="nav">
             <h1 class="hd">Ma<span id="cl">r</span>y</h1>
             <ul class="ul" type="none">
@@ -38,7 +38,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-background hide">
+        <section class="about secondary-background">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="pid">
@@ -74,10 +74,10 @@
                 </div>
             </div>
         </section>
-        <section class="resume hide">
+        <section class="resume">
             <h1 class="rh">A summary of My Resume</h1>
             <div class="ed-ex">
-                <div class="ed" style="margin-right: 35px;">
+                <div class="ed">
                     <h2 class="edh">My Education</h2>
                     <hr>
                     <div class="D0">
@@ -98,7 +98,7 @@
                         <p class="d3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
-                <div class="ex" style="margin-left: 35px;">
+                <div class="ex">
                     <h2 class="edh">My Experience</h2>
                     <hr>
                     <div class="D0">
@@ -125,7 +125,7 @@
             </div>
         </section>  
     </main>
-    <footer class="foot hide">
+    <footer class="foot">
         <div class="connect">
             <h2 class="fh">Lets Connect</h2>
             <p class="d4">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
