--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="banner">
             <div class="text">
                 <h4 id="sub" class=".dark-2">Hi, I  am</h4>
-                <h1>Mary Hardy</h1>
+                <h1>Yasir Arafat</h1>
                 <p class="des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div class="main">
                     <div class="down">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </div>
-            <img class="profile" src="images/hardy.png" alt="comming soon">
+            <img class="profile" style="margin-top: 100px; margin-right: 100px; border-radius: 16px;" src="images/YasirPort-2.jpg" alt="comming soon">
         </div>
     </header>
     <main>
@@ -42,10 +42,10 @@
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="pid">
-                <p class="pg"><span id="x1">Name:</span><br><span id="x2">Mary Hardy</span></p>
-                <p class="pg"><span id="x1">Email:</span><br><span id="x2">info@gmail.com</span></p>
-                <p class="pg"><span id="x1">Date Of Birth:</span><br><span id="x2">11 November 1987</span></p>
-                <p class="pg"><span id="x1">From:</span><br><span id="x2">Los Angeles,USA</span></p>
+                <p class="pg"><span id="x1">Name:</span><br><span id="x2">Yasir Arafat</span></p>
+                <p class="pg"><span id="x1">Email:</span><br><span id="x2">yasir.fnb1@gmail.com</span></p>
+                <p class="pg"><span id="x1">Date Of Birth:</span><br><span id="x2">02 February 2003</span></p>
+                <p class="pg"><span id="x1">From:</span><br><span id="x2">Daffodil Smart City,DIU</span></p>
             </div>
         </section>
         <section class="skills">
