--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer Portfolio</title>
+    <title>Yasir Arafat Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
             <div class="text">
                 <h4 id="sub" class=".dark-2">Hi, I  am</h4>
                 <h1>Yasir Arafat</h1>
-                <p class="des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="des">I’m Yasir Arafat, a passionate and dedicated Engineering Student with a keen eye for detail and a commitment to delivering my best work. Explore my work below, and let’s connect to make something amazing together!</p>
                 <div class="main">
                     <div class="down">
                         <button id="tex"><i class="fa-solid fa-download"></i> Download CV</button>
@@ -40,7 +40,7 @@
     <main>
         <section class="about secondary-background">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I am Yasir Arafat, currently, I am studying in electrical and electronic engineering at Daffodil International University with CGPA 3.71 out of 4.In my future I will like to see myself  as successful electrical power engineer in Bangladesh power sector. However,  I have a special interest in topics such as computer programming, software development, web development, AI, machine learning etc. So, I don't want to stop myself from exploring all this great Technological  skill that are dominating the world today.</p>
             <div class="pid">
                 <p class="pg"><span id="x1">Name:</span><br><span id="x2">Yasir Arafat</span></p>
                 <p class="pg"><span id="x1">Email:</span><br><span id="x2">yasir.fnb1@gmail.com</span></p>
@@ -50,7 +50,7 @@
         </section>
         <section class="skills">
             <h3 class="section-title text-center">What I do</h3>
-            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="section-description text-center"> I have strong skills in some powerful high level programming language like C, Python, JavaScript, HTML and CSS. During my study at Daffodil International University I have done some extra ordinary project on C language and Python. which were highly appreciated by my programming course teacher during semester course.By using C language I have created a digital stop watch and by using Python I was made a hand control virtual Mouse. This successful project boosted my confidence and increase my interest in programming language. </p>
             <div class="skill-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
