--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             </div>
         </section>
         <section class="resume">
+            <h1 class="rh">My Video Resume</h1>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Ilo1SWpCxwA?si=WvHc-QylMqquNGXy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="resume">
             <h1 class="rh">A summary of My Resume</h1>
             <div class="ed-ex">
                 <div class="ed">
